Add support for upload files

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "private": true,
   "dependencies": {
     "apollo-server-core": "2.14.2",
-    "apollo-server-module-graphiql": "1.4.0"
+    "apollo-server-module-graphiql": "1.4.0",
+    "graphql-tools": "6.0.16",
+    "graphql-upload": "11.0.0"
   }
 }
