--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adonis-apollo-server",
+  "name": "@lukinco/adonis-apollo-server",
   "version": "0.1.0",
   "description": "Production-ready Node.js GraphQL server for AdonisJS",
   "main": "index.js",
@@ -7,6 +7,9 @@
   "author": "Lukin Co.",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "postversion": "npm publish --access=public"
+  },
   "dependencies": {
     "apollo-server-core": "2.14.2",
     "apollo-server-module-graphiql": "1.4.0",
